<resources>
    <string name="app_name">safiri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello, Welcome to Safiri app!</string>
    <string name="rate_us">Rate Us</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="settings">Settings</string>
    <string name="nairobi_city">Nairobi city</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="choose_location">Choose location</string>
    <string name="pick_location">Pick Location</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="icon_of_the_place">Icon of the place</string>
    <string name="home_icon">Home</string>
    <string name="search">Search</string>
    <string name="more_items">more items</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="home_reset">reset</string>
    <string name="work">Work</string>
</resources>